--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="about" class="about">
         <div class="container">
             <h2>About</h2>
-            <p>I'm passionate about using technology to solve real-world problems. Whether it's IT support, data analysis, or web development, I'm all about finding practical solutions that help people and organizations succeed. I love learning new things and am always looking for opportunities to improve and make an impact.</p>
+            <p>Hi, I’m Ibtihaj. An IT professional and data analyst who loves turning ideas into practical solutions. Whether it’s troubleshooting issues, analyzing data, or building something new, I’m all about using technology to make a difference. I enjoy learning, solving problems, and finding creative ways to improve things.</p>
         </div>
     </section>
 
@@ -30,21 +30,21 @@
             <div class="project-list">
                 <div class="project-card">
                     <img src="project1.jpg" alt="Project 1">
-                    <h3>Project Title 1</h3>
-                    <p>A brief description of the project goes here. Highlight the purpose or technologies used.</p>
-                    <a href="project.html" class="btn">Learn More</a>
+                    <h3>Data Analytics</h3>
+                    <p>Using tools like R, SQL, and Power BI, I turn data into actionable insights to solve real-world problems.</p>
+                    <a href="project.html" class="btn">View Projects</a>
                 </div>
                 <div class="project-card">
                     <img src="project2.jpg" alt="Project 2">
-                    <h3>Project Title 2</h3>
-                    <p>A brief description of the project goes here. Highlight the purpose or technologies used.</p>
-                    <a href="project.html" class="btn">Learn More</a>
+                    <h3>IT & Automation</h3>
+                    <p>I use tools like PowerShell and Python to automate repetitive IT tasks and improve efficiency</p>
+                    <a href="project.html" class="btn">View Projects</a>
                 </div>
                 <div class="project-card">
                     <img src="project3.jpg" alt="Project 3">
-                    <h3>Project Title 3</h3>
-                    <p>A brief description of the project goes here. Highlight the purpose or technologies used.</p>
-                    <a href="project.html" class="btn">Learn More</a>
+                    <h3>Web Development</h3>
+                    <p>Using tools like HTML, CSS, JavaScript, and responsive design, I create websites that provide seamless user experiences across all devices.</p>
+                    <a href="project.html" class="btn">View Projects</a>
                 </div>
             </div>
         </div>
