--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
         <div class="banner">
             <img src="logo.png" alt="Ibtihaj Alghamdi Logo">
         </div>
-        <div class="hero-content">
-            <h1>Data Analyst | IT Support | Web Developer</h1>
-        </div>
     </header>
 
     <section id="about" class="about">
@@ -29,19 +26,19 @@
             <h2>Projects</h2>
             <div class="project-list">
                 <div class="project-card">
-                    <img src="project1.png" alt="Project 1">
+                    <img src="project1.png" alt="Data Analytics Project">
                     <h3>Data Analytics</h3>
                     <p>Using tools like R, SQL, and Power BI, I turn data into actionable insights to solve real-world problems.</p>
                     <a href="project.html" class="btn">View Projects</a>
                 </div>
                 <div class="project-card">
-                    <img src="project2.png" alt="Project 2">
+                    <img src="project2.png" alt="IT & Automation Project">
                     <h3>IT & Automation</h3>
                     <p>I use tools like PowerShell and Python to automate repetitive IT tasks and improve efficiency</p>
                     <a href="project.html" class="btn">View Projects</a>
                 </div>
                 <div class="project-card">
-                    <img src="project3.png" alt="Project 3">
+                    <img src="project3.png" alt="Web Development Project">
                     <h3>Web Development</h3>
                     <p>Using tools like HTML, CSS, JavaScript, and responsive design, I create websites that provide seamless user experiences across all devices.</p>
                     <a href="project.html" class="btn">View Projects</a>
