--- a/index.html
+++ b/index.html
@@ -26,19 +26,25 @@
             <h2>Projects</h2>
             <div class="project-list">
                 <div class="project-card">
+                <div class="project-icon">
                     <img src="project1.png" alt="Data Analytics Project">
+                    </div>
                     <h3>Data Analytics</h3>
                     <p>Using tools like R, SQL, and Power BI, I turn data into actionable insights to solve real-world problems.</p>
                     <a href="project.html" class="btn">View Projects</a>
                 </div>
                 <div class="project-card">
-                    <img src="project2.png" alt="IT & Automation Project">
+                <div class="project-icon">
+                <img src="project2.png" alt="IT & Automation Project">
+                </div>
                     <h3>IT & Automation</h3>
-                    <p>I use tools like PowerShell and Python to automate repetitive IT tasks and improve efficiency</p>
+                    <p>I use tools like PowerShell and Python to automate repetitive IT tasks and improve efficiency.</p>
                     <a href="project.html" class="btn">View Projects</a>
                 </div>
                 <div class="project-card">
+                <div class="project-icon">
                     <img src="project3.png" alt="Web Development Project">
+                </div>
                     <h3>Web Development</h3>
                     <p>Using tools like HTML, CSS, JavaScript, and responsive design, I create websites that provide seamless user experiences across all devices.</p>
                     <a href="project.html" class="btn">View Projects</a>
