--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
             <h2>Projects</h2>
             <div class="project-list">
                 <div class="project-card">
-                <div class="project-icon">
-                    <img src="project1.png" alt="Data Analytics Project">
-                    </div>
-                    <h3>Data Analytics</h3>
+                    <h3>Data Analytics<span class="project-icon"><img src="project1.png" alt="Data Analytics Project"></span></h3> 
                     <p>Using tools like R, SQL, and Power BI, I turn data into actionable insights to solve real-world problems.</p>
                     <a href="project.html" class="btn">View Projects</a>
                 </div>
