--- a/index.html
+++ b/index.html
@@ -31,18 +31,12 @@
                     <a href="project.html" class="btn">View Projects</a>
                 </div>
                 <div class="project-card">
-                <div class="project-icon">
-                <img src="project2.png" alt="IT & Automation Project">
-                </div>
-                    <h3>IT & Automation</h3>
+                    <h3>IT & Automation<span class="project-icon"> <img src="project2.png" alt="IT & Automation Project"></span></h3>
                     <p>I use tools like PowerShell and Python to automate repetitive IT tasks and improve efficiency.</p>
                     <a href="project.html" class="btn">View Projects</a>
                 </div>
                 <div class="project-card">
-                <div class="project-icon">
-                    <img src="project3.png" alt="Web Development Project">
-                </div>
-                    <h3>Web Development</h3>
+                    <h3>Web Development<span class="project-icon"> <img src="project3.png" alt="Web Development Project"></span></h3>
                     <p>Using tools like HTML, CSS, JavaScript, and responsive design, I create websites that provide seamless user experiences across all devices.</p>
                     <a href="project.html" class="btn">View Projects</a>
                 </div>
